# rings

./: .gitignore  .rustfmt.toml  AGENT.md  AI.sh  CLAUDE.md  Cargo.toml  CargoOri.toml  DEV.sh  GEMINI.md  README.md  SIGNATOR_REFACTOR_SUMMARY.md  cli.tools.md  config.sample.yml  gemini_execution_report.md  githook.sh  s.txt  start_claude_code.sh  start_gemini_cli.sh  tests_load.yml  todo.toml
.kiro/specs/service-discovery/: requirements.md
aithinking/: RINGS_REFACTORING_REPORT.md  api_analysis.md  api_limitor_analysis.md  comprehensive_code_analysis_report.md  erx_analysis.md  nulltrait_implementation.md  strings_utility_analysis.md
benches/: signator_clone_benchmark.rs
ccuse/: bmrefactory.md
docs/: jwt_implementation_summary.md  jwt_middleware.md  signator_configuration.md
docs/rings/summary/: api.md  openai.md
examples/: complete_jwt_example.rs  jwt_middleware_usage.rs  signator_config.rs
rexamples/: .gitignore  Cargo.toml  rexamples.paw
rexamples/config/: config.yml  testing.yml
rexamples/model/: .env  Cargo.toml  commands.md
rexamples/model/database/: users.sql
rexamples/model/src/: cnregion.rs  lib.rs  model.rs  user.rs
rexamples/model/src/entity/: cn_region.rs  mod.rs  prelude.rs  user.rs  user_auth_log.rs  user_bind.rs
rexamples/schedule/: Cargo.toml
rexamples/schedule/src/: lib.rs
rexamples/service/: Cargo.toml
rexamples/service/src/: lib.rs  public.rs
rexamples/service/src/public/: cnregion.rs
rexamples/service/src/system/: service.rs
rexamples/service/src/user/: auth.rs
rexamples/src/: main.rs  mringm.rs  rm.rs
rexamples/src/mringm/auth/: auth.rs
rexamples/src/mringm/home/: home.rs
rexamples/src/rm/: service.rs
rexamples/src/rm/inn/: auth.rs
rexamples/web/: Cargo.toml
rexamples/web/src/: action.rs  lib.rs
rexamples/web/src/action/: api.rs  doc.rs  front.rs  tool.rs
rexamples/web/src/action/api/: v1.rs
rexamples/web/src/action/api/v1/: public.rs  system.rs
rexamples/web/src/action/api/v1/public/: cnregion.rs
rexamples/web/src/action/api/v1/system/: version.rs
rexamples/web/src/middleware/: api.rs
rexamples/web/src/middleware/api/: signator.rs
ringb/: Cargo.toml
ringb/src/: cargo.rs  main.rs
ringm/: Cargo.toml  README.md
ringm/src/: any.rs  lib.rs  migrate.rs  seaorm.rs  service.rs  tools.rs
ringsmacro/: Cargo.toml
ringsmacro/src/: lib.rs  migrate.rs
scripts/: DEV.sh  gits.sh
src/: any.rs  app.rs  balanced.rs  conf.rs  core.rs  erx.rs  fns.rs  id.rs  lib.rs  log.rs  lua.lua  lua.rs  macros.rs  migrate.rs  model.rs  object.rs  prelude.rs  rex.rs  rings.rs  scheduler.rs  service.rs  tools.rs  web.rs
src/core/: runtime.rs  traits.rs
src/core/traits/: error.rs  null.rs
src/model/: coffee.rs  dbms.rs  facade.rs  jq.rs  jsons.rs  kv.rs  preset.rs  results.rs  rs.rs  sql.rs  sqlgen.rs  status.rs  value.rs  zero.rs
src/model/facade/: redis.rs  seaorm.rs
src/model/preset/: migrates.rs  readme.md
src/model/preset/migrates/: config.rs  user.rs
src/tools/: ai.rs  audio.rs  balanced.rs  captcha.rs  charset.rs  datetime.rs  encrypt.rs  file.rs  fs.rs  hash.rs  httpclient.rs  id.rs  json.rs  json_structure.rs  lua.lua  lua.rs  mcp.rs  number.rs  openai.rs  promptor.rs  rand.rs  strings.rs  tests.rs  validator.rs  xml.rs  zip.rs
src/web/: api.rs  client.rs  context.rs  cookie.rs  define.rs  except.rs  input.rs  inputvalidator.rs  luaction.rs  messages.rs  middleware.rs  middleware.rs.txt  request.rs  route.rs  signature.rs  tools.rs  types.rs  url.rs  validation.rs  validator.rs
src/web/messages/: crud.rs  filter.rs  list.rs  pagination.rs  query.rs
src/web/middleware/: README.md  jwt.rs  jwt.rs.txt  limitor.rs  profile.rs  signator.rs  signator.rs.txt  signator_test.rs  signature.rs
src/web/middleware/jwt/: blacklist.rs  rate_limit.rs.txt  refresh.rs
src/web/middleware/reference/: examples.rs.txt
systemd/: README.md  install.sh  rings.service
tests/: jwt_comprehensive_test.rs  jwt_integration_test.rs  using-test-config.yml
