[package]
name = "rings"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ringsmacro", "ringb"]

[workspace.dependencies]
tracing = { version = "0.1" }
tracing-serde = { version = "0.2" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
axum = { version = "0.8.1", features = ["macros", "json", "tokio", "multipart"] }
config = { version = "0.15", features = ["json", "yaml", "toml"] }
chrono = { version = "0.4" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
lazy_static = { version = "1.5" }
sea-orm = { version = "1", features = ["sqlx-postgres", "postgres-array", "with-chrono", "with-json", "runtime-tokio", "macros", "with-bigdecimal"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres"] }
redis = { version = "0.29.1" }
rand = { version = "0.9.0" }
log = { version = "0.4" }
hex = { version = "0.4.3" }
hmac = { version = "0.12" }
futures-util = { version = "0.3", features = ["default"] }
base64 = { version = "0.22" }
tokio-cron-scheduler = { version = "0.13" }
async-trait = { version = "0.1" }


[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
tracing = { workspace = true }
tracing-serde = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
hex = { version = "0.4" }
hmac = { version = "0.12" }
lazy_static = { workspace = true }
percent-encoding = { version = "2.3" }
redis = { workspace = true }
regex = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sha1 = { version = "0.10" }
url = { version = "2", features = ["default", "serde"] }
aes = { version = "0.8" }
cbc = { version = "0.1" }
cfb-mode = { version = "0.8" }
ofb = { version = "0.6" }
ctr = { version = "0.9" }
pem = "3.0.5"
block-padding = { version = "0.3" }
rsa = { version = "0.9" }
rand = { workspace = true }
base64 = { workspace = true }
tokio-cron-scheduler = { workspace = true }
async-trait = { workspace = true }
