[package]
name = "rings"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ringb", "ringm"]

[workspace.dependencies]
aes = { version = "0.8" }
async-openai = { version = "0.28" }
async-trait = { version = "0.1" }
axum = { version = "0.8", features = ["macros", "json", "tokio", "multipart"] }
base64 = { version = "0.22" }
block-padding = { version = "0.3" }
cbc = { version = "0.1" }
cfb-mode = { version = "0.8" }
chrono = { version = "0.4" }
config = { version = "0.15", features = ["json", "yaml", "toml"] }
ctr = { version = "0.9" }
futures-util = { version = "0.3", features = ["default"] }
hex = { version = "0.4" }
hmac = { version = "0.12" }
lazy_static = { version = "1.5" }
log = { version = "0.4" }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
ofb = { version = "0.6" }
pem = { version = "3.0" }
percent-encoding = { version = "2.3" }
rand = { version = "0.8.5" }
redis = { version = "0.29", features = ["tokio-comp", "json", "tcp_nodelay"] }
regex = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
rsa = { version = "0.9" }
sea-orm = { version = "1", features = ["sqlx-postgres", "postgres-array", "with-chrono", "with-json", "runtime-tokio", "macros", "with-bigdecimal"] }
sea-orm-migration = { version = "1", features = ["sqlx-postgres"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
sha1 = { version = "0.10" }
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.13" }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-serde = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = { version = "2", features = ["default", "serde"] }

[dependencies]
aes = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
block-padding = { workspace = true }
cbc = { workspace = true }
cfb-mode = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
ctr = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
ofb = { workspace = true }
pem = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rsa = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-serde = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
